# website_CMS

./: .env  .gitignore  DEVELOPMENT_PLAN.md  FINAL_INSTRUCTIONS.md  cases.html  config.yml  content.json  education.html  index.html  netlify-forms-detect.html  netlify.toml  news.html  package-lock.json  package.json  reference website  render.yaml  script.js  standalone-oauth-test.html  start.sh  styles.css  test-cms-standalone.html  test.html  windsurf_deployment.yaml
ace/: docker-compose.yaml  pyproject.toml  requirements-news.txt
ace/configs/: config.example.yaml
ace/orchestrator/: __init__.py  config.py  models.py
ace/orchestrator/agents/: __init__.py
ace/orchestrator/agents/ingestion/: manual.py  rss.py  smol.py
ace/orchestrator/agents/processing/: planner.py  relevance.py
ace/orchestrator/agents/quality/: __init__.py  fact_check.py  link_health.py
ace/orchestrator/agents/writer/: digest.py
ace/orchestrator/jobs/: __init__.py  news_digest.py
ace/orchestrator/pipelines/: __init__.py  news_digest.py
ace/orchestrator/publishing/: __init__.py  git.py
ace/orchestrator/storage/: __init__.py  database.py  models.py
ace/orchestrator/tests/: test_news_digest_pipeline.py
ace/orchestrator/utils/: __init__.py  llm.py
admin/: callback.html  clean-admin.html  clean-test.html  cms-test.html  config.yml  index.html  minimal-cms.html  oauth-debug.html  oauth-simple.html  oauth-test.html  official-cms.html  react-test.html  simple-cms.html  simple-test.html  standard-cms.html  test-clean.html  test-oauth.html  test-simple.html  working-cms.html  (+1 more)
(+137 files in other folders)
